# autoresearch-gen

./: .env.example  .gitignore  Makefile  README.md  architecture.excalidraw  dashboard.py  excalidraw_gen.py  gen.py  pyproject.toml
assets/: architecture.excalidraw
experiments/attention-free/: .gitignore  attention-free.excalidraw  experiments.tsv  prepare.py  program.md  pyproject.toml  results.tsv  train.py
experiments/gpt-pretraining/: train.py
templates/: gitignore  prepare_mlx.py  prepare_pt.py  program.md  train_mlx.py  train_pt.py
tests/: conftest.py  test_dashboard.py  test_excalidraw_gen.py  test_gen.py
tests/fixtures/: sample_experiments.tsv  sample_program.md  sample_results.tsv  sample_train.py
